# aes_benchgen

./: CMakeLists.txt  LICENSE.md  README.md
include/: constants.h  openssl_aes.h  optparse.h  self_aes.h  test.h  tinyaes.h
src/: main.c  openssl_aes.c  self_aes.c  test.c
